Styled searchbar, mapbuttons. Spacing yet to be fixed

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -5,7 +5,8 @@ ul {
 }
 
 .logo {
-  max-width: 50%;
+  width: 100px;
+  height: 100px;
   height: auto;
   color: grey;
 }
